# fireflyer

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  architecture.md  docker-compose.yml  garage.toml  portal.yaml  pyproject.toml
.github/workflows/: ci.yml  tag-on-merge.yml
files/: orders.csv  orders.parquet
fireflyer/: PARAM_SKILL.md  __init__.py  cell.html  config_edit.py  dashboard.css  dashboard.html  dashboard.py  datasets.py  filters.py  params.py  portal.py  scan.py  skeleton.html  storage.py
fireflyer/chart/: SKILL.md  __init__.py
fireflyer/web/: __main__.py  app.py  auth.py  chat.py  paths.py  portal.py
media/: ai-edit.webm  ui-edit.webm  yaml-edit.webm
tests/: conftest.py  test_auth.py  test_bar.py  test_chart_params_match_constructor.py  test_chat.py  test_config_edit.py  test_dashboard.py  test_datasets.py  test_editor_page.py  test_filters.py  test_map.py  test_number.py  test_params.py  test_paths.py  test_paths_mode.py  test_pie.py  test_portal.py  test_table.py  test_tabs.py
tests/data/: orders.csv  orders.parquet
tests/snapshots/: test_bar_orders_by_day.html  test_bar_orders_by_day_stacked.html  test_dashboard_smart_example.html  test_map_orders_density.html  test_number_sum_amount.html  test_pie_orders_by_status.html  test_pie_orders_crossfilter_active.html  test_pie_orders_declared_filter.html  test_tabbed_dashboard_snapshot.html  test_table_orders.html  test_table_orders_declared_filter.html  test_table_orders_filtered.html  test_table_orders_filtered_no_match.html  (+2 more)
(+25 files in other folders)
