[project]
name = "fireflyer"
version = "0.3.0"
description = "Turn CSVs into HTML visualizations."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Danylo Korostil", email = "ted.korostiled@gmail.com" }]
# Source-available: Apache-2.0 with the Commons Clause condition (no selling /
# no hosted commercial service). Not an OSI-approved license, so this is a file
# reference rather than an SPDX identifier.
license = { file = "LICENSE" }
dependencies = [
    "polars>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fireflyer"]
